# ai-meal-planner

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.streamlit/: secrets.example.toml
backend/: .env.example  __init__.py  config.py  main.py  meal_definition_agent.py  nutrition_agent.py  requirements.txt  supermarket_agent.py
backend/app/: __init__.py  main.py
backend/app/agents/: calorie_expenditure_agent.py  meal_recommendation_agent.py  nutrition_verification_agent.py
backend/app/core/: config.py
backend/app/ml/: __init__.py
backend/tests/: test_calorie_expenditure_agent.py  test_feedback_repository.py  test_meal_vector_rag.py  test_retrieval_quality_regression.py
blueprints/: 00_system_architecture.md  01_coding_guidelines.md  02_meal_definition_agent.md  03_nutrition_agent.md  04_supermarket_agent.md  05_react_frontend.md
data/: README.md
data/meal_corpus/: meals.json
database/: user_profiles.example.json
docs/agents/: calorie_expenditure_agent.md  meal_recommendation_agent.md  nutrition_verification_agent.md  supermarket_agent.md
docs/architecture/: system_architecture.md  vector_rag.md
docs/engineering/: repo_structure_conventions.md
docs/product/: backend_first_roadmap.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
models/: README.md
models/calorie_expenditure/: README.md  calorie_expenditure_model.joblib  feature_schema.json  metrics.json
notebooks/: calorie_expenditure_kaggle_training.ipynb  multimodal_workflow_agents.ipynb
streamlit_app/: app.py
(+9 files in other folders)
