[project]
name = "ai-meal-planner"
version = "0.1.0"
description = "Backend-first AI meal planner with calorie prediction and local meal RAG."
requires-python = ">=3.11,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
google-genai = "*"
joblib = ">=1.4,<2"
numpy = ">=1.26,<3"
pandas = ">=2.2,<3"
pydantic = "*"
python-dotenv = "*"
pytest = "*"
requests = "*"
scikit-learn = "1.6.1"
streamlit = "*"
uvicorn = "*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"
